--- a/App_GlobalResources/JSConsts.it.resx
+++ b/App_GlobalResources/JSConsts.it.resx
@@ -124,10 +124,10 @@
     <value>j/n/Y</value>
   </data>
   <data name="DATE_TIME_FORMAT" xml:space="preserve">
-    <value>j/n/Y g:i:s|j/n/Y</value>
+    <value>j/n/Y G:i:s|j/n/Y</value>
   </data>
   <data name="DATE_TIME_FORMAT_DEF" xml:space="preserve">
-    <value>j/n/Y g:i:s A</value>
+    <value>j/n/Y G:i:s</value>
   </data>
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
     <value>j/n/Y G:i:s</value>
