--- a/App_GlobalResources/JSConsts.ja.resx
+++ b/App_GlobalResources/JSConsts.ja.resx
@@ -121,16 +121,16 @@
     <value>Y/m/d</value>
   </data>
   <data name="DATE_FORMAT" xml:space="preserve">
-    <value> Y/n/j</value>
+    <value>Y/n/j</value>
   </data>
   <data name="DATE_TIME_FORMAT" xml:space="preserve">
-    <value>Y/n/j g:i:s|Y/n/j</value>
+    <value>Y/n/j G:i:s|Y/n/j</value>
   </data>
   <data name="DATE_TIME_FORMAT_DEF" xml:space="preserve">
-    <value>n/j/Y g:i:s A</value>
+    <value>n/j/Y G:i:s A</value>
   </data>
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
-    <value>Y/n/j g:i:s</value>
+    <value>Y/n/j G:i:s</value>
   </data>
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
     <value>.</value>
