--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.en-GB.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.en-GB.resx
@@ -124,16 +124,16 @@
     <value>j/n/Y</value>
   </data>
   <data name="DATE_LONG_FORMAT" xml:space="preserve">
-    <value>j/n/Y g:i:s A</value>
+    <value>j/n/Y H:i:s</value>
   </data>
   <data name="DATE_TIME_FORMAT" xml:space="preserve">
-    <value>j/n/Y g:i:s A|j/n/Y</value>
+    <value>j/n/Y H:i:s|j/n/Y</value>
   </data>
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
-    <value>j/n/Y g:i:s A</value>
+    <value>j/n/Y H:i:s</value>
   </data>
   <data name="ERR_DATE_FORMAT" xml:space="preserve">
-    <value>mm/dd/YYYY</value>
+    <value>dd/mm/YYYY</value>
   </data>
   <data name="GRAPH_CURRENCY_FORMAT" xml:space="preserve">
     <value>$%.2f</value>
@@ -697,7 +697,7 @@
     <value>Middle initial is invalid</value>
   </data>
   <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
-    <value>j/n/Y g:i:s A</value>
+    <value>j/n/Y H:i:s</value>
   </data>
   <data name="TEXT_NOWCAST_REFRESH" xml:space="preserve">
     <value>Refresh</value>
