--- a/Sites/MetraView/App_LocalResources/Subscriptions.aspx.es.resx
+++ b/Sites/MetraView/App_LocalResources/Subscriptions.aspx.es.resx
@@ -139,6 +139,6 @@
     <value>Mis suscripciones</value>
   </data>
   <data name="EmptyLiteral.Text" xml:space="preserve">
-    <value>[ES]No records found</value>
+    <value>[ES]No Records Found</value>
   </data>
 </root>
