--- a/Sites/MetraView/App_LocalResources/Subscriptions.aspx.it.resx
+++ b/Sites/MetraView/App_LocalResources/Subscriptions.aspx.it.resx
@@ -139,6 +139,6 @@
     <value>Abbonamenti personali</value>
   </data>
   <data name="EmptyLiteral.Text" xml:space="preserve">
-    <value>[IT]No records found</value>
+    <value>[IT]No Records Found</value>
   </data>
 </root>
