CORE-6786 Feat-1577 Rate Inheritance: account isn't prompted for inherited subscription dates range during account moving / account creation

--- a/Templates/App_LocalResources/SelectGroupSubscriptions.aspx.en-GB.resx
+++ b/Templates/App_LocalResources/SelectGroupSubscriptions.aspx.en-GB.resx
@@ -174,4 +174,13 @@
   <data name="WARNONEBCR" xml:space="preserve">
     <value>Warn On EBCR Start Date Change</value>
   </data>
+  <data name="EndDateResource1.Label" xml:space="preserve">
+    <value>Subscriptions End Date</value>
+  </data>
+  <data name="StartDateResource1.Label" xml:space="preserve">
+    <value>Subscriptions Start Date</value>
+  </data>
+  <data name="SubscriptionSpanPanel.Text" xml:space="preserve">
+    <value>Subscription Span</value>
+  </data>
 </root>
