--- a/Templates/App_LocalResources/SelectGroupSubscriptions.aspx.fr.resx
+++ b/Templates/App_LocalResources/SelectGroupSubscriptions.aspx.fr.resx
@@ -174,4 +174,13 @@
   <data name="WARNONEBCR" xml:space="preserve">
     <value>Signaler la modification de la date de début EBCR</value>
   </data>
+  <data name="EndDateResource1.Label" xml:space="preserve">
+    <value>Abonnements Date de fin</value>
+  </data>
+  <data name="StartDateResource1.Label" xml:space="preserve">
+    <value>Abonnements Date de départ</value>
+  </data>
+  <data name="SubscriptionSpanPanel.Text" xml:space="preserve">
+    <value>Abonnement Span</value>
+  </data>
 </root>
