CORE-8203 Amount that contains 9 symbols doesn't separate by commas
Code Reviewer: YZapara

--- a/App_GlobalResources/JSConsts.en-GB.resx
+++ b/App_GlobalResources/JSConsts.en-GB.resx
@@ -135,6 +135,9 @@
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
     <value>.</value>
   </data>
+  <data name="DIGIT_SEPARATOR" xml:space="preserve">
+    <value>,</value>
+  </data>
   <data name="DUPLICATE" xml:space="preserve">
     <value>Duplicate</value>
   </data>
@@ -1295,8 +1298,14 @@
   </data>
   <data name="TEXT_NOWCAST_RIGHT_CLICK_FOR_OPTIONS" xml:space="preserve">
     <value>right click for options</value>
-  </data>  
+  </data>
   <data name="TEXT_NO_DATA_FOR_GRAPH" xml:space="preserve">
     <value>No data available</value>
-  </data>     
+  </data>
+  <data name="CURRENT_LOCALE" xml:space="preserve">
+    <value>en-GB</value>
+  </data>
+  <data name="FRACTION_DIGITS" xml:space="preserve">
+    <value>2</value>
+  </data>
 </root>
