CORE-8237:- MetraOffer- the new bill message button has incorrect label

--- a/App_GlobalResources/Resource.fr.resx
+++ b/App_GlobalResources/Resource.fr.resx
@@ -153,6 +153,10 @@
   <data name="TEXT_ADD" xml:space="preserve">
     <value>Ajouter des comptes</value>
   </data>
+    <data name="TEXT_ADD_BILLMESSAGE" xml:space="preserve">
+    <value>Create Bill Message</value>
+  </data>
+  
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>Ajouter</value>
   </data>
