--- a/App_GlobalResources/Resource.en-GB.resx
+++ b/App_GlobalResources/Resource.en-GB.resx
@@ -153,6 +153,10 @@
   <data name="TEXT_ADD" xml:space="preserve">
     <value>Add Accounts</value>
   </data>
+  <data name="TEXT_ADD_BILLMESSAGE" xml:space="preserve">
+    <value>Create Bill Message</value>
+  </data>
+  
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>Add</value>
   </data>
