--- a/App_GlobalResources/Resource.es-MX.resx
+++ b/App_GlobalResources/Resource.es-MX.resx
@@ -153,6 +153,10 @@
   <data name="TEXT_ADD" xml:space="preserve">
     <value>[es-MX]Add Accounts</value>
   </data>
+      <data name="TEXT_ADD_BILLMESSAGE" xml:space="preserve">
+    <value>[es-MX]Create Bill Message</value>
+  </data>
+  
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>[es-MX]Add</value>
   </data>
