--- a/App_GlobalResources/Resource.ja.resx
+++ b/App_GlobalResources/Resource.ja.resx
@@ -153,6 +153,10 @@
   <data name="TEXT_ADD" xml:space="preserve">
     <value>アカウントの追加</value>
   </data>
+    <data name="TEXT_ADD_BILLMESSAGE" xml:space="preserve">
+     <value>Create Bill Message</value>
+  </data>
+  
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>追加</value>
   </data>
