CORE-8305 Localization ( French): it's impossible to set misc. adjustment for account under French localization
Code reviewer: ZMartynov

--- a/App_GlobalResources/JSConsts.fr.resx
+++ b/App_GlobalResources/JSConsts.fr.resx
@@ -136,7 +136,7 @@
     <value>,</value>
   </data>
   <data name="DIGIT_SEPARATOR" xml:space="preserve">
-    <value>.</value>
+    <value> </value>
   </data>
   <data name="DUPLICATE" xml:space="preserve">
     <value>Copier</value>
