--- a/App_GlobalResources/Resource.it.resx
+++ b/App_GlobalResources/Resource.it.resx
@@ -153,6 +153,9 @@
   <data name="TEXT_ADD" xml:space="preserve">
     <value>Aggiungi conti</value>
   </data>
+  <data name="TEXT_ADD_BILL_MESSAGE" xml:space="preserve">
+    <value>Aggiungi messaggio fattura</value>
+  </data>
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>Aggiungi</value>
   </data>
