--- a/App_GlobalResources/Resource.es.resx
+++ b/App_GlobalResources/Resource.es.resx
@@ -153,6 +153,9 @@
   <data name="TEXT_ADD" xml:space="preserve">
     <value>Añadir cuentas</value>
   </data>
+  <data name="TEXT_ADD_BILL_MESSAGE" xml:space="preserve">
+    <value>Añadir mensaje factura</value>
+  </data>
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>Añadir</value>
   </data>
