--- a/App_GlobalResources/Resource.fr.resx
+++ b/App_GlobalResources/Resource.fr.resx
@@ -153,6 +153,9 @@
   <data name="TEXT_ADD" xml:space="preserve">
     <value>Ajouter des comptes</value>
   </data>
+  <data name="TEXT_ADD_BILL_MESSAGE" xml:space="preserve">
+    <value>Ajouter un message de facture</value>
+  </data>
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>Ajouter</value>
   </data>
