--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.es-MX.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.es-MX.resx
@@ -129,6 +129,12 @@
   <data name="DATE_TIME_FORMAT" xml:space="preserve">
     <value>j/n/Y h:i:s a|j/n/Y</value>
   </data>
+  <data name="DECIMAL_SEPARATOR" xml:space="preserve">
+    <value>.</value>
+  </data>
+  <data name="DIGIT_SEPARATOR" xml:space="preserve">
+    <value>,</value>
+  </data>
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
     <value>j/n/Y h:i:s a</value>
   </data>
