CORE-8294 MetraControl: cannot update execution frequency of scheduled adapters in Brazilian Portuguese
Fixed wrong VaildationRegex value in PR and ES resx files

--- a/MetraControl/ScheduledAdapters/App_LocalResources/ScheduleDaily.aspx.es-MX.resx
+++ b/MetraControl/ScheduledAdapters/App_LocalResources/ScheduleDaily.aspx.es-MX.resx
@@ -160,7 +160,7 @@
 altFormats:DATE_TIME_FORMAT</value>
   </data>
   <data name="tbStartDateResource1.ValidationRegex" xml:space="preserve">
-    <value>nulo(a)</value>
+    <value>null</value>
   </data>
   <data name="tbStartTimeResource1.Label" xml:space="preserve">
     <value>Horas de ejecución (en UTC)</value>
