--- a/App_GlobalResources/JSConsts.de.resx
+++ b/App_GlobalResources/JSConsts.de.resx
@@ -121,22 +121,16 @@
     <value>d.m.Y</value>
   </data>
   <data name="DATE_FORMAT" xml:space="preserve">
-    <value>d.m.Y</value>
+    <value>j.n.Y</value>
   </data>
   <data name="DATE_TIME_FORMAT" xml:space="preserve">
-    <value>d.m.Y H:i:s|d.m.Y</value>
+    <value>j.n.Y H:i:s|j.n.Y</value>
   </data>
   <data name="DATE_TIME_FORMAT_DEF" xml:space="preserve">
-    <value>d.m.Y H:i:s A</value>
+    <value>n/j/Y H:i:s A</value>
   </data>
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
-    <value>d.m.Y H:i:s</value>
-  </data>
-  <data name="TEXT_LONG_DATE_FORMAT" xml:space="preserve">
-    <value>d.m.Y H:ia</value>
-  </data>
-  <data name="ERR_DATE_FORMAT" xml:space="preserve">
-    <value>dd.mm.YYYY</value>
+    <value>j.n.Y H:i:s</value>
   </data>
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
     <value>,</value>
@@ -146,6 +140,9 @@
   </data>
   <data name="DUPLICATE" xml:space="preserve">
     <value>Duplizieren</value>
+  </data>
+  <data name="ERR_DATE_FORMAT" xml:space="preserve">
+    <value>mm/dd/YYYY</value>
   </data>
   <data name="FAILURE" xml:space="preserve">
     <value>Fehler</value>
@@ -424,7 +421,7 @@
     <value>Möchten Sie die Vorlage '{0}' wirklich löschen?</value>
   </data>
   <data name="TEXT_DELETE_TEMPLATE_SUB_MESSAGE" xml:space="preserve">
-    <value>Möchten Sie {0} wirklich aus der Vorlage entfernen?</value>
+    <value>'Möchten Sie {0} wirklich aus der Vorlage entfernen?</value>
   </data>
   <data name="TEXT_DELETED" xml:space="preserve">
     <value>Gelöscht</value>
@@ -677,6 +674,9 @@
   </data>
   <data name="TEXT_LOGOUT_QUESTION" xml:space="preserve">
     <value>Möchten Sie sich wirklich abmelden?</value>
+  </data>
+  <data name="TEXT_LONG_DATE_FORMAT" xml:space="preserve">
+    <value>j.n.Y g:ia</value>
   </data>
   <data name="TEXT_MANAGE_ACCOUNT" xml:space="preserve">
     <value>Konto verwalten</value>
