--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.de.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.de.resx
@@ -121,25 +121,31 @@
     <value>d.m.y</value>
   </data>
   <data name="DATE_FORMAT" xml:space="preserve">
-    <value>j.n.Y</value>
+    <value>d.m.Y</value>
   </data>
   <data name="DATE_LONG_FORMAT" xml:space="preserve">
-    <value>j.n.Y H:i:s</value>
+    <value>d.m.Y H:i:s</value>
   </data>
   <data name="DATE_TIME_FORMAT" xml:space="preserve">
-    <value>j.n.Y H:i:s | j.n.Y</value>
+    <value>d.m.Y H:i:s | d.m.Y</value>
   </data>
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
-    <value>j.n.Y H:i:s</value>
+    <value>d.m.Y H:i:s</value>
+  </data>
+  <data name="TEXT_LONG_DATE_FORMAT" xml:space="preserve">
+    <value>d.m.Y H:ia</value>
+  </data>
+  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
+    <value>d.m.Y H:i:s</value>
+  </data>
+  <data name="ERR_DATE_FORMAT" xml:space="preserve">
+    <value>dd.mm.YYYY</value>
   </data>
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
     <value>,</value>
   </data>
   <data name="DIGIT_SEPARATOR" xml:space="preserve">
     <value>.</value>
-  </data>
-  <data name="ERR_DATE_FORMAT" xml:space="preserve">
-    <value>dd.mm.YYYY</value>
   </data>
   <data name="GRAPH_CURRENCY_FORMAT" xml:space="preserve">
     <value>$%.2f</value>
@@ -459,9 +465,6 @@
   <data name="TEXT_LOGOUT_QUESTION" xml:space="preserve">
     <value>Möchten Sie sich wirklich abmelden?</value>
   </data>
-  <data name="TEXT_LONG_DATE_FORMAT" xml:space="preserve">
-    <value>j.n.Y g:ia</value>
-  </data>
   <data name="TEXT_MANAGE_ACCOUNT" xml:space="preserve">
     <value>Konto verwalten</value>
   </data>
@@ -702,9 +705,6 @@
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] Middle initial is invalid</value>
   </data>  
-  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
-    <value>j.n.Y H:i:s</value>
-  </data>
   <data name="TEXT_NOWCAST_REFRESH" xml:space="preserve">
     <value>[DE] Refresh</value>
   </data>
