--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.pt-br.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.pt-br.resx
@@ -132,14 +132,20 @@
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
     <value>j/n/Y G:i:s</value>
   </data>
+  <data name="TEXT_LONG_DATE_FORMAT" xml:space="preserve">
+    <value>j/n/Y G:ia</value>
+  </data>
+  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
+    <value>j/n/Y G:i:s</value>
+  </data>
+  <data name="ERR_DATE_FORMAT" xml:space="preserve">
+    <value>dd/mm/YYYY</value>
+  </data>
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
     <value>,</value>
   </data>
   <data name="DIGIT_SEPARATOR" xml:space="preserve">
     <value>.</value>
-  </data>
-  <data name="ERR_DATE_FORMAT" xml:space="preserve">
-    <value>dd/mm/YYYY</value>
   </data>
   <data name="GRAPH_CURRENCY_FORMAT" xml:space="preserve">
     <value>$%.2f</value>
@@ -459,9 +465,6 @@
   <data name="TEXT_LOGOUT_QUESTION" xml:space="preserve">
     <value>Tem certeza que deseja fazer logout?</value>
   </data>
-  <data name="TEXT_LONG_DATE_FORMAT" xml:space="preserve">
-    <value>j/n/Y g:ia</value>
-  </data>
   <data name="TEXT_MANAGE_ACCOUNT" xml:space="preserve">
     <value>Gerenciar conta</value>
   </data>
@@ -701,9 +704,6 @@
   </data>
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>A inicial do meio é inválida</value>
-  </data>
-  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
-    <value>j/n/Y G:i:s</value>
   </data>
   <data name="TEXT_NOWCAST_REFRESH" xml:space="preserve">
     <value>Atualizar</value>
