--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.resx
@@ -132,14 +132,20 @@
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
     <value>n/j/Y g:i:s A</value>
   </data>
+  <data name="TEXT_LONG_DATE_FORMAT" xml:space="preserve">
+    <value>n/j/Y g:ia</value>
+  </data>
+  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
+    <value>n/j/Y g:i:s A</value>
+  </data>
+  <data name="ERR_DATE_FORMAT" xml:space="preserve">
+    <value>d/m/YYYY</value>
+  </data>
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
     <value>.</value>
   </data>
   <data name="DIGIT_SEPARATOR" xml:space="preserve">
     <value>,</value>
-  </data>
-  <data name="ERR_DATE_FORMAT" xml:space="preserve">
-    <value>mm/dd/YYYY</value>
   </data>
   <data name="GRAPH_CURRENCY_FORMAT" xml:space="preserve">
     <value>$%.2f</value>
@@ -459,9 +465,6 @@
   <data name="TEXT_LOGOUT_QUESTION" xml:space="preserve">
     <value>Are you sure you want to logout?</value>
   </data>
-  <data name="TEXT_LONG_DATE_FORMAT" xml:space="preserve">
-    <value>n/j/Y g:ia</value>
-  </data>
   <data name="TEXT_MANAGE_ACCOUNT" xml:space="preserve">
     <value>Manage Account</value>
   </data>
@@ -701,9 +704,6 @@
   </data>
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>Middle initial is invalid</value>
-  </data>
-  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
-    <value>n/j/Y g:i:s A</value>
   </data>
   <data name="TEXT_NOWCAST_REFRESH" xml:space="preserve">
     <value>Refresh</value>
