CORE-8199 There are no titles on dataexport Audit History page

--- a/DataExportReportManagement/App_LocalResources/ShowExportDashboardDetails.aspx.fr.resx
+++ b/DataExportReportManagement/App_LocalResources/ShowExportDashboardDetails.aspx.fr.resx
@@ -150,4 +150,19 @@
   <data name="TEXT_DEF_REPORT_TITLE" xml:space="preserve">
     <value>Titre du rapport</value>
   </data>
+  <data name="TEXT_AUDIT_ID" xml:space="preserve">
+    <value>vérification id</value>
+  </data>
+  <data name="TEXT_DEF_DELIVERY_TYPE_TEXT" xml:space="preserve">
+    <value>Type de rapport de distribution texte</value>
+  </data>
+  <data name="TEXT_DEF_INSTANCE_RUN_STATUS" xml:space="preserve">
+    <value>Exemple Exécuter Résultat</value>
+  </data>
+  <data name="TEXT_DEF_REPORT_OUTPUT_FILENAME" xml:space="preserve">
+    <value>Nom du fichier de sortie</value>
+  </data>
+  <data name="TEXT_DEF_REPORT_OUTPUT_TYPE_TEXT" xml:space="preserve">
+    <value>Rapport Type de sortie texte</value>
+  </data>
 </root>
