--- a/DataExportReportManagement/App_LocalResources/ShowExportDashboardDetails.aspx.pt-br.resx
+++ b/DataExportReportManagement/App_LocalResources/ShowExportDashboardDetails.aspx.pt-br.resx
@@ -150,4 +150,19 @@
   <data name="TEXT_DEF_REPORT_TITLE" xml:space="preserve">
     <value>Título do relatório</value>
   </data>
+  <data name="TEXT_AUDIT_ID" xml:space="preserve">
+    <value>ID de auditoria</value>
+  </data>
+  <data name="TEXT_DEF_DELIVERY_TYPE_TEXT" xml:space="preserve">
+    <value>Relatório Tipo de Distribuição Texto</value>
+  </data>
+  <data name="TEXT_DEF_INSTANCE_RUN_STATUS" xml:space="preserve">
+    <value>Instância Run Resultado</value>
+  </data>
+  <data name="TEXT_DEF_REPORT_OUTPUT_FILENAME" xml:space="preserve">
+    <value>nome do arquivo de saída</value>
+  </data>
+  <data name="TEXT_DEF_REPORT_OUTPUT_TYPE_TEXT" xml:space="preserve">
+    <value>relatório tipo de saída de texto</value>
+  </data>
 </root>
