--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.de.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.de.resx
@@ -195,4 +195,22 @@
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
     <value>{DE}No data available</value>
   </data>  
+  <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
+    <value>{DE}Change</value>
+  </data>
+  <data name="TEXT_MRR" xml:space="preserve">
+    <value>{DE}MRR</value>
+  </data>
+  <data name="TEXT_PRODUCT_CODE_TOOLTIP" xml:space="preserve">
+    <value>{DE}Product Code</value>
+  </data>
+  <data name="TEXT_SUBSCRIPTIONS_TOOLTIP" xml:space="preserve">
+    <value>{DE}Subscriptions</value>
+  </data>
+  <data name="TEXT_SUBSCRIPTIONS_GAIN_TOOLTIP" xml:space="preserve">
+    <value>{DE}Increase of {0} or {1} subscriptions</value>
+  </data>
+  <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
+    <value>{DE}Decrease of {0} or {1} subscriptions</value>
+  </data>  
 </root>
