--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.pt-br.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.pt-br.resx
@@ -195,4 +195,22 @@
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
     <value>{PT-BR}No data available</value>
   </data>  
+  <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
+    <value>{PT-BR}Change</value>
+  </data>
+  <data name="TEXT_MRR" xml:space="preserve">
+    <value>{PT-BR}MRR</value>
+  </data>
+  <data name="TEXT_PRODUCT_CODE_TOOLTIP" xml:space="preserve">
+    <value>{PT-BR}Product Code</value>
+  </data>
+  <data name="TEXT_SUBSCRIPTIONS_TOOLTIP" xml:space="preserve">
+    <value>{PT-BR}Subscriptions</value>
+  </data>
+  <data name="TEXT_SUBSCRIPTIONS_GAIN_TOOLTIP" xml:space="preserve">
+    <value>{PT-BR}Increase of {0} or {1} subscriptions</value>
+  </data>
+  <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
+    <value>{PT-BR}Decrease of {0} or {1} subscriptions</value>
+  </data>  
 </root>
